# authenticator-qr-keeper

./: .gitignore  Makefile  README.md  code_checks.sh  edit-encrypted-file.sh  example.qrcodes.file  passcrypt.py  pyproject.toml  qr  setup.py  setup_requires.py
.gitea/workflows/: ci.yml
PoC-encryption/: .gitignore  enc-dec.sh  pyread.py  pywrite.py
authentication_qr_keeper/: passcrypt.py  qr.py
encryption-PoC/: crypt.sh  edit-encrypted-file.sh
scripts/: decrypt-file.sh  edit-encrypted-file.sh  encrypt-file.sh
tests/: test_passcrypt.py  test_qr.py
